force-app/main/default/objects/CventEvents__SurveyProgram__c/CventEvents__SurveyProgram__c.object-meta.xml
<CustomObject>
    <description>Stores configuration of Cvent survey data sync. Can be tied to a single standalone- or multiple event-surveys.</description>
    <label>Cvent Survey Program</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cvent Survey Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>