force-app/main/default/objects/CventEvents__SurveyProgram__c/fields/CventEvents__Description__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>