force-app/main/default/objects/CventEvents__SurveyProgram__c/fields/CventEvents__FullSurveyTitle__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__FullSurveyTitle__c</fullName>
    <label>Full Survey Title</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>