force-app/main/default/objects/CventEvents__SurveyProgram__c/fields/CventEvents__LastSyncDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__LastSyncDate__c</fullName>
    <description>The most recent synchronization date and time.</description>
    <inlineHelpText>The most recent synchronization date and time.</inlineHelpText>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField>