force-app/main/default/objects/CventEvents__SurveyProgram__c/fields/CventEvents__QuestionTagStubs__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__QuestionTagStubs__c</fullName>
    <description>Stores the list of selected tags for Event Survey Program.</description>
    <label>Question Tag Stubs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>