force-app/main/default/objects/CventEvents__SurveyProgram__c/fields/CventEvents__SurveyAuthorEmail__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__SurveyAuthorEmail__c</fullName>
    <label>Survey Author Email</label>
    <type>Email</type>
</CustomField>