force-app/main/default/objects/CventEvents__SurveyProgram__c/fields/CventEvents__SurveyAuthorFirstName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__SurveyAuthorFirstName__c</fullName>
    <label>Survey Author First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>