force-app/main/default/objects/CventEvents__SurveyProgram__c/fields/CventEvents__SurveyAuthorLastName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__SurveyAuthorLastName__c</fullName>
    <label>Survey Author Last Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>