force-app/main/default/objects/CventEvents__SurveyProgram__c/fields/CventEvents__SurveyCode__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__SurveyCode__c</fullName>
    <label>Survey Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>