force-app/main/default/objects/CventEvents__SurveyProgram__c/fields/CventEvents__SurveyLink__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__SurveyLink__c</fullName>
    <description>Link used to send survey invitation.</description>
    <label>Survey Link</label>
    <type>Url</type>
</CustomField>