force-app/main/default/objects/CventEvents__SurveyProgram__c/fields/CventEvents__SurveyStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__SurveyStub__c</fullName>
    <externalId>true</externalId>
    <label>Survey Stub</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>