force-app/main/default/objects/CventEvents__SurveyProgram__c/fields/CventEvents__SurveyTestLink__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__SurveyTestLink__c</fullName>
    <description>Link used to test Cvent survey.</description>
    <label>Survey Test Link</label>
    <type>Url</type>
</CustomField>