force-app/main/default/objects/CventEvents__SurveyProgram__c/fields/CventEvents__SurveyTitle__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__SurveyTitle__c</fullName>
    <label>Survey Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>