force-app/main/default/objects/CventEvents__SurveyProgram__c/listViews/Consulting.listView-meta.xml
<ListView>
    <fullName>Consulting</fullName>
    <columns>NAME</columns>
    <columns>CventEvents__Type__c</columns>
    <columns>CventEvents__Status__c</columns>
    <columns>CventEvents__LastSyncStatus__c</columns>
    <columns>CventEvents__LastSyncDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Consulting</label>
</ListView>